use just name instead of first_name and last_name
